Solved flex 07 by using containers around the different elements and adding flex properties and styling and alignments

--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -1,29 +1,76 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
-  min-height: 100vh;
+  height: 100vh;
+  display: flex;
 }
 
-.header {
-  height: 72px;
-  background: darkmagenta;
+ul {
+  display: flex;
+  flex-direction: column;
+  list-style-type: none;
+  padding: 0;
+  margin: 20px;
+  gap: 20px;
+}
+
+a {
+  text-decoration: none;
+  font-size: 24px;
   color: white;
 }
 
+.layout {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+
+.header {
+  font-size: 32px;
+  background: darkmagenta;
+  color: white;
+  padding: 16px;
+  display: flex;
+  align-items: center;
+  font-weight: 900;
+}
+
+.content-body {
+  flex: 1;
+  display: flex;
+}
+
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  flex: 1;
+  padding: 48px;
+  gap: 20px;
+}
+
 .footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 72px;
   background: #eee;
   color: darkmagenta;
 }
 
 .sidebar {
-  width: 300px;
+  display: flex;
+  flex: 0 0 300px;
   background: royalblue;
   box-sizing: border-box;
+  padding: 16px;
 }
 
 .card {
+  width: 300px;
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  padding: 16px;
 }
